Bug 70804 - radeonsi_compute.c:254:11: error: 'struct pipe_context' has no member named 'set_compute_sampler_views'
Summary: radeonsi_compute.c:254:11: error: 'struct pipe_context' has no member named '...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-10-23 17:35 UTC by Vinson Lee
Modified: 2013-10-23 19:44 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
fix breakage (1.53 KB, text/plain)
2013-10-23 18:31 UTC, Brian Paul
Details

Description Vinson Lee 2013-10-23 17:35:54 UTC
mesa: a3ed98f7aa85636579a5696bf036ec13e5c9104a

  CC       radeonsi_compute.lo
radeonsi_compute.c: In function 'si_init_compute_functions':
radeonsi_compute.c:254:11: error: 'struct pipe_context' has no member named 'set_compute_sampler_views'
  rctx->b.b.set_compute_sampler_views = si_set_cs_sampler_view;
           ^
Comment 1 Brian Paul 2013-10-23 18:31:47 UTC
Created attachment 88049 [details]
fix breakage

Can you test this patch, Vinson?
Comment 2 Vinson Lee 2013-10-23 19:36:02 UTC
attachment 88049 [details] fixes the build.

Tested-by: Vinson Lee <vlee@freedesktop.org>
Comment 3 Brian Paul 2013-10-23 19:44:16 UTC
Fixed w/ commit ef98e2ee618f9452a3d16b8fb884d0318f7896fc


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.